# reactos

./: .gitignore  CMakeLists.txt  configure.cmd
base/: CMakeLists.txt
base/system/smss/: smss.h
boot/: CMakeLists.txt
boot/bootdata/: hivesys.inf  txtsetup.sif
boot/freeldr/: CMakeLists.txt
dll/: CMakeLists.txt
dll/appcompat/apphelp/: shimeng.c
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll-uvcrt.txt  ntdll.spec
dll/ntdll/etw/: eventlog.c  trace.c
dll/ntdll/include/: ldrp.h  ntdll.h  ntdllp.h
dll/ntdll/ldr/: CMakeLists.txt  LdrGetDllHandleEx.c  LdrGetProcedureAddressForCaller.c  LdrImageDirectoryEntryToLoadConfig.c  LdrpAllocatePlaceHolder.c  LdrpBuildForwarderLink.c  LdrpCompleteMapModule.c  LdrpCondenseGraph.c  LdrpCreateDllSection.c  LdrpDecrementNodeLoadCount.c  LdrpDependencyExist.c  LdrpDereferenceModule.c  LdrpDereferenceModule.cpp  LdrpDestroyNode.c  LdrpDoPostSnapWork.c  LdrpDoPostSnapWork.cpp  LdrpDrainWorkQueue.c  LdrpFastpthReloadedDll.c  LdrpFindDllActivationContext.c  LdrpFindDllActivationContext.cpp  LdrpFindExistingModule.c  LdrpFindKnownDll.c  LdrpFindLoadedDll.c  LdrpFindLoadedDllByAddress.c  LdrpFindLoadedDllByHandle.c  LdrpFindLoadedDllByMapping.c  LdrpFindLoadedDllByMappingFile.c  LdrpFindLoadedDllByName.c  LdrpFindOrPrepareLoadingModule.c  LdrpFreeLoadContext.c  LdrpFreeLoadContextOfNode.c  LdrpFreeReplacedModule.c  LdrpGetFullPath.c  LdrpGetImportDescriptorForSnap.c  LdrpGetProcedureAddress.c  LdrpGetShimEngineInterface.c  LdrpHandleNewFormatImportDescriptors.c  LdrpHandleOldFormatImportDescriptors.c  LdrpHandlePendingModuleReplaced.c  LdrpHandleReplacedModule.c  (+53 more)
dll/ntdll/rtl/: libsupp.c  process.c  thread.c
dll/ntdll/threadpool/: threadpool.c
dll/opengl/opengl32/: opengl32.h
dll/win32/: CMakeLists.txt
dll/win32/advapi32/: CMakeLists.txt  advapi32.spec
dll/win32/advapi32_vista/: CMakeLists.txt  advapi32_vista.spec  eventlog.c
dll/win32/browseui/shellbars/: shellbars.h
dll/win32/kernel32/: CMakeLists.txt  kernel32-alias.txt  kernel32.spec
dll/win32/kernel32/client/: except.c  fiber.c  fls.c  loader.c  path.c  proc.c  sysinfo.c  thread.c  utils.c
dll/win32/kernel32/client/console/: readwrite.c
dll/win32/kernel32/client/file/: create.c  filename.c  find.c
dll/win32/kernel32/include/: kernel32.h
dll/win32/kernel32/kernel32_vista/: CMakeLists.txt  sync.c  threadpool.c  vista.c  wer.c
dll/win32/kernel32/winnls/: locale_rc.rc
dll/win32/kernel32/winnls/string/: lang.c  lcformat.c
dll/win32/kernel32_vista/: CMakeLists.txt  kernel32_vista.spec  nlsex.c  sync.c  threadpool.c  wer.c
dll/win32/lsasrv/: authpackage.c
dll/win32/mshtml/: omnavigator.c
dll/win32/msvcrt/: msvcrt.spec
dll/win32/ntdll_vista/: CMakeLists.txt  DllMain.c  condvar.c  eventlog.c  ntdll_vista.spec  threadpool.c
dll/win32/setupapi/: install.c
dll/win32/uxtheme/: nonclient.c  themehooks.c
drivers/: CMakeLists.txt
drivers/base/kdcom/: kddll.c  kdserial.c
drivers/base/kdvm/: kdvm.c
drivers/filesystems/fastfat/: vfat.h
drivers/filesystems/npfs/: npfs.h
drivers/filters/fltmgr/: fltmgr.h
drivers/input/kbdclass/: kbdclass.c
drivers/input/mouclass/: mouclass.c
hal/halx86/apic/: apic.c
ntoskrnl/: CMakeLists.txt  ntos.cmake  ntoskrnl.spec  sysfuncs.lst
ntoskrnl/cc/: fs.c  lazywrite.c
ntoskrnl/config/i386/: cmhardwr.c
ntoskrnl/dbgk/: dbgkobj.c  dbgkutil.c
ntoskrnl/ex/: handle.c  harderr.c  init.c  resource.c  sysinfo.c  time.c  win32k.c  work.c
ntoskrnl/fsrtl/: filelock.c  notify.c
ntoskrnl/inbv/: inbv.c
ntoskrnl/include/: ntoskrnl.h  sysfuncs.h  sysfuncs64.h
ntoskrnl/include/internal/: ex.h  io.h  ke.h  ke_x.h  mm.h  ntoskrnl.h  ps.h  ps_x.h  tag.h
ntoskrnl/io/iomgr/: driver.c  error.c  irp.c  irq.c  util.c
ntoskrnl/kd64/: kdbreak.c  kddata.c  kdinit.c  kdprint.c
ntoskrnl/ke/: apc.c  balmgr.c  bug.c  clock.c  cpu.c  dpc.c  gate.c  ipi.c  krnlinit.c  procobj.c  thrdobj.c  thrdschd.c  time.c  wait.c
ntoskrnl/ke/i386/: context.c  cpu.c  exp.c  irqobj.c  kiinit.c  thrdini.c  trap.s  traphdlr.c  usercall.c  usercall_asm.S  v86vdm.c
ntoskrnl/lpc/: close.c  complete.c  reply.c  send.c
ntoskrnl/mm/: marea.c  mminit.c
ntoskrnl/mm/ARM3/: drvmgmt.c  mdlsup.c  miarm.h  mminit.c  mmquery.c  mmsup.c  pagfault.c  pfnlist.c  procsup.c  section.c  session.c  sysldr.c  vadnode.c  virtual.c
ntoskrnl/mm/i386/: page.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
ntoskrnl/ob/: devicemap.c  obhandle.c
ntoskrnl/ps/: debug.c  kill.c  process.c  psmgr.c  query.c  security.c  state.c  thread.c  win32.c
ntoskrnl/ps/i386/: psldt.c
ntoskrnl/rtl/: libsupp.c
ntoskrnl/rtl/i386/: stack.S
ntoskrnl/se/: semgr.c
sdk/cmake/: CMakeMacros.cmake  compilerflags.cmake  gcc.cmake  host-tools.cmake  idl-support.cmake  midl-support.cmake  msvc.cmake  widl-support.cmake
sdk/include/_crt/: math.h
sdk/include/asm/: CMakeLists.txt  genincdata.c  ks386.template.h  ksx.template.h
sdk/include/crt/: stdlib.h
sdk/include/ddk/: ntimage.h  rx.h
sdk/include/ndk/: cmtypes.h  extypes.h  kefuncs.h  ketypes.h  ldrfuncs.h  ldrtypes.h  lpctypes.h  mmtypes.h  ntbits-src-kernel.txt  ntbits-src.h  ntbits-src.txt  ntbits.h  obtypes.h  peb_teb.h  psfuncs.h  (+7 more)
sdk/lib/: CMakeLists.txt
sdk/lib/crt/: CMakeLists.txt  crt.cmake  libcntpr.cmake
sdk/lib/crt/include/internal/: locale.h  mtdll.h
sdk/lib/crt/locale/: locale.c
sdk/lib/crt/mbstring/: islead.c
sdk/lib/crt/printf/: _sxprintf.c  vsnprintf.c  vsnprintf_s.c
sdk/lib/crt/string/: _mbsnlen.c  _mbstrnlen.c  _tsplitpath_x.h  mbstowcs_s.c  strtod.c  wcstombs_s.c
sdk/lib/crtex/: CMakeLists.txt  crtex.h
sdk/lib/crtex/mingw/: CMakeLists.txt  cpuid.c  crtex.cpp  crtex_mingw.h
sdk/lib/crtex/mingw/except/: cpp.s  except_i386.c
sdk/lib/crtex/mingw/wine/: math.c  time.c
sdk/lib/crtex/ms/: CMakeLists.txt
sdk/lib/rtl/: CMakeLists.txt  atom.c  critical.c  dbgbuffer.c  debug.c  error.c  exception.c  fls.c  heap.c  heap.h  heapdbg.c  heapuser.c  image.c  loader.c  loader_heap.c  path.c  rtl.h  rtlp.h  runonce.c  sid.c  srw.c  thread.c  trace.c  unicode.c  version.c
sdk/tools/: CMakeLists.txt
(+82 files in other folders)
