if (NOT NTDLL_WORK)
add_subdirectory(3rdparty)
add_subdirectory(apisets)
add_subdirectory(appcompat)
add_subdirectory(cpl)
add_subdirectory(directx)
add_subdirectory(keyboard)
add_subdirectory(nls)
add_subdirectory(np)
endif()
add_subdirectory(ntdll)
if (NOT NTDLL_WORK)
add_subdirectory(opengl)
add_subdirectory(shellext)
endif()
add_subdirectory(win32)